--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bunyan": "*",
     "length-stream": "*",
     "minimist": "*",
-    "coffee-script": "*"
+    "coffee-script": "*",
+    "spdy": "*"
   },
   "scripts": {
     "test": "istanbul test _mocha -- --reporter spec --slow 500 --timeout 15000",
